[package]
name = "noiselib"
version = "0.1.0"
edition = "2021"
authors = ["Markus Moenig"]
description = "A procedural creator library for 2D noises and patterns"
license = "MIT"
repository = "https://github.com/markusmoenig/noiselib.git"
keywords = ["noise", "procedural", "perlin", "fractal", "library"]

[dev-dependencies]
image = "0.23.14"
