[package]
name = "noiselib"
version = "0.2.4"
edition = "2021"
authors = ["Markus Moenig"]
description = "A library of procedural 1D, 2D, 3D and 4D noise and fractal functions."
license = "MIT"
repository = "https://github.com/markusmoenig/noiselib.git"
keywords = ["noise", "procedural", "perlin", "fractal", "library"]

[dev-dependencies]
image = "0.23.14"
